# akkio-iframe-demo

./: .gitignore  README.md  docker-compose.yml  index.html  server.js
sandbox/: add_to_db.py  dashboard.html  insights.html
sandbox/node_files/: package-lock.json  package.json  server.js
web/: Dockerfile  pyproject.toml  run.py
web/src/: __init__.py  akkio.db  config.py  forms.py  models.py  routes.py  utils.py
web/src/templates/: analyze.html  base.html  dashboard.html  home.html  insights.html  login.html  predict.html  register.html  setup.html
