[tool.poetry]
name = "Akkio WL Demo"
version = "0.1.0"
description = "Akkio WL and API Demo App"
authors = ["sudheer-akkio <sudheer@akkio.com>"]
license = "Akkio"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
requests = "^2.31.0"
flask-wtf = "^1.1.1"
wtforms = "^3.0.1"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.5"
flask = "^2.3.3"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
